--- a/geostats/src/main/res/layout/indicators.xml
+++ b/geostats/src/main/res/layout/indicators.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fragment_container"
+    style="@style/Main"
     android:layout_width="match_parent"
-    style="@style/FrameLayoutBody"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbarStyle="outsideOverlay"
+        style="@style/FrameLayoutBody.Container"/>
+
+    </FrameLayout>
