--- a/geostats/src/main/res/layout/vp_world_deepest_lakes.xml
+++ b/geostats/src/main/res/layout/vp_world_deepest_lakes.xml
@@ -63,7 +63,7 @@
 		    </TableRow>
 		    <TableRow style="@style/TableRow">
 		         <TextView 
-		          	style="@style/TableTextView.PaddingBottom0"
+		          	style="@style/TableTextView"
 		            android:text="@string/CaspianSea"/>
 			    <TextView 
 		          	style="@style/TableTextView.GravityRight"
