--- a/geostats/src/main/res/values/earthquakes.xml
+++ b/geostats/src/main/res/values/earthquakes.xml
@@ -11,7 +11,7 @@
 	<string name="Spitak">Spitak</string>
 	<string name="EchChelif">Ech Chélif</string>
 	<string name="KhorasanProvince">Khorasan Province</string>
-	<string name="TangshanHebeiProvince">Tangshan, Hebei Province</string>
+	<string name="TangshanHebeiProvince">Tangshan, Hebei Prov.</string>
 	<string name="CentralGuatemala">central Guatemala</string>
 	<string name="YunnanAndSichuanProvinces">Yunnan and Sichuan Provinces</string>
 	<string name="HuanucoProvince">Huánuco Province</string>
