--- a/geostats/src/main/res/values/weather_extremes.xml
+++ b/geostats/src/main/res/values/weather_extremes.xml
@@ -15,7 +15,7 @@
 	<string name="HighestSurfaceWindSpeedTornado">Highest surface wind speed - Tornado</string>
 	<string name="GreatestSnowfall">Greatest snowfall</string>
 	<string name="HeaviestHailstones">Heaviest hailstones</string>
-	<string name="ThunderDaysAverage">Thunder -days average</string>
+	<string name="ThunderDaysAverage">Thunder days average</string>
 	<string name="HighestBarometricPressure">Highest barometric pressure</string>
 	<string name="LowestBarometricPressure">Lowest barometric pressure</string>
 	
