--- a/geostats/src/main/res/layout/about.xml
+++ b/geostats/src/main/res/layout/about.xml
@@ -1,19 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/AboutLayout">
+
+    <TextView
+        style="@style/DialogTitle"
+        android:text="@string/app_name"
+        android:id="@+id/dTitle"/>
+
+    <TextView
+        style="@style/DialogChartNo"
+        android:layout_below="@+id/dTitle"
+        android:id="@+id/chartNo"
+        android:text="@string/app_subname"/>
+
+    <TextView
+        android:id="@+id/tvInfoAbout"
+        android:layout_below="@+id/chartNo"
+        style="@style/TextViewAbout"
+        android:textIsSelectable="true"
+        android:paddingBottom="0dp"
+        android:text=""/>
+
+    <Button
+        style="@style/ButCloseDialog"
+        android:id="@+id/btClose"/>
     
-	<TextView 
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:text="@string/app_about"/>
-	
-	<Button 
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:id="@+id/btClose"
-	    android:layout_gravity="center_horizontal"
-	    android:text="@string/Close"/>
+    <Button
+        android:id="@+id/btRefs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/Bibliography"
+        android:layout_below="@+id/tvInfoAbout"
+        android:gravity="left"
+        android:padding="12dp"
+        android:layout_marginTop="-24dp"
+        android:background="@drawable/table_button"
+        android:color="@color/colorDarkGrey"/>
     
-</LinearLayout>
+</RelativeLayout>
