--- a/geostats/src/main/res/layout/indicators_record_detail.xml
+++ b/geostats/src/main/res/layout/indicators_record_detail.xml
@@ -3,9 +3,7 @@
     android:id="@+id/tvRecordDetail"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
-    android:textSize="18sp">
+    android:layout_height="match_parent">
     
     <TextView 
         android:layout_width="wrap_content"
