--- a/geostats/src/main/res/layout/my_simple_list_item_activated_1.xml
+++ b/geostats/src/main/res/layout/my_simple_list_item_activated_1.xml
@@ -5,10 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:paddingRight="10dp"
-    android:paddingLeft="10dp"
+    android:paddingRight="6dp"
+    android:paddingLeft="6dp"
     android:paddingTop="13dp"
     android:paddingBottom="13dp"
     android:textSize="16sp"
+    android:background="@drawable/list_item"
     android:textColor="@color/colorDarkGrey"
     />
