--- a/geostats/src/main/res/values/styles.xml
+++ b/geostats/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
     <color name="colorDarkGreyActionBar">#606060</color>
     <color name="colorShadow">#f3f3f3</color>
     <color name="colorTransparent">#00000000</color>
-    <color name="colorTdBg">#f9f9f9</color>
+    <color name="colorTdBg">#fafafa</color>
     <color name="colorThBg">#dfdfdf</color>
     <color name="colorTdStroke">#e3e3e3</color>
     <color name="colorThStroke">@color/colorTdStroke</color>
@@ -80,11 +80,26 @@
     </style>
 
     <style name="FrameLayoutBody.Container">
-        <item name="android:padding">10dp</item>
+        <item name="android:padding">12dp</item>
         <item name="android:paddingTop">7dp</item>
         <item name="android:paddingBottom">7dp</item>
     </style>
+    <style name="TextViewAbout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:color">@color/colorDarkGrey</item>
+        <item name="android:background">@color/colorScrollView</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
 
+    </style>
+    <style name="AboutLayout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_marginRight">5dp</item>
+    </style>
     <style name="TableLayout">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -158,8 +173,7 @@
         <item name="android:background">@drawable/table_button</item>
         <item name="android:paddingTop">10dp</item>
         <item name="android:paddingBottom">10dp</item>
-        <item name="android:gravity">center</item>
-        <item name="android:drawableBottom">@drawable/underline</item>
+        <item name="android:gravity">center|right</item>
 
     </style>
     <style name="TableTextView.Bold">
@@ -169,17 +183,16 @@
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">fill_parent</item>
         <item name="android:fillViewport">false</item>
-        <item name="android:scrollbars">none</item>
         <item name="android:background">@color/colorScrollView</item>
         <item name="android:layout_marginLeft">5dp</item>
         <item name="android:layout_marginRight">5dp</item>
+        <item name="android:scrollbars">none</item>
     </style>
     <style name="TextViewTitle">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingTop">5dp</item>
         <item name="android:paddingLeft">8dp</item>
-        <item name="android:paddingRight">20dp</item>
         <item name="android:paddingBottom">7dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:background">@color/colorDialogTitleBg</item>
