--- a/geostats/src/main/res/drawable/button.xml
+++ b/geostats/src/main/res/drawable/button.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
         android:state_pressed="true"
-        android:drawable="@color/colorCCC" />
+        android:drawable="@drawable/bg_button_over" />
     <item
         android:state_focused="true"
-        android:drawable="@color/colorCCC" />
+        android:drawable="@drawable/bg_button_over" />
     <item
         android:state_checked="true"
-        android:drawable="@color/colorCCC" />
+        android:drawable="@drawable/bg_button_over" />
 
-    <item android:drawable="@color/colorScrollView"/>
+    <item android:drawable="@drawable/bg_button"/>
 
 </selector>
