--- a/geostats/src/main/res/layout-land/intro.xml
+++ b/geostats/src/main/res/layout-land/intro.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:background="@drawable/intro_splash_land" >
-    
+    tools:context=".Intro">
+
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:src="@drawable/bg_intro_land"
+        android:scaleType="centerCrop"/>
 
 </LinearLayout>
