--- a/geostats/src/main/res/layout/inc_viewpager.xml
+++ b/geostats/src/main/res/layout/inc_viewpager.xml
@@ -1,13 +1,18 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
     <com.geo.viewpagerindicator.TabPageIndicator
         android:id="@+id/indicator"
-        android:background="#000000"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         />
     
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
+        android:paddingTop="4dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingBottom="12dp"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 </merge>
