--- a/geostats/src/main/res/layout/fragment_ocean.xml
+++ b/geostats/src/main/res/layout/fragment_ocean.xml
@@ -8,6 +8,7 @@
     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="0dp"
+        android:padding="12dp"
         android:layout_weight="@string/layoutWeightFragmentA">
 
 	    <include layout="@layout/inc_fragment_buttons"/>
