--- a/geostats/src/main/res/layout/inc_fragment_buttons.xml
+++ b/geostats/src/main/res/layout/inc_fragment_buttons.xml
@@ -1,6 +1,6 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 	<Button
-        style="@style/FragmentButtons"
+        style="@style/MainButtons.Sub"
         android:text="@string/BasicInfo"
         android:id="@+id/btDialog10"/>
 </merge>
