--- a/geostats/src/main/res/values/styles.xml
+++ b/geostats/src/main/res/values/styles.xml
@@ -36,7 +36,7 @@
 
     <style name="Theme.PageIndicatorDefaults" parent="@style/Theme.AppCompat.Light">
         <item name="vpiIconPageIndicatorStyle">@style/Widget.IconPageIndicator</item>
-        <item name="vpiTabPageIndicatorStyle">@style/Widget.TabPageIndicator</item>
+        <item name="vpiTabPageIndicatorStyle">@style/MyTabPageIndicator</item>
 
         <!-- Support library compatibility -->
         <item name="actionBarStyle">@style/MyActionBar</item>
@@ -46,8 +46,14 @@
         <item name="actionBarItemBackground">@drawable/bg_actionbar_tabview_pattern</item>
         <item name="homeAsUpIndicator">@drawable/my_abc_ic_ab_back_holo_light</item>
     </style>
-
-    <style name="MyActionBar" parent="@style/Widget.AppCompat.ActionBar">
+    <style name="MyTabPageIndicator" parent="Widget.TabPageIndicator">
+        <item name="android:background">@drawable/vptab</item>
+        <item name="android:textColor">@color/colorDarkGrey</item>
+        <item name="android:paddingLeft">17dip</item>
+        <item name="android:paddingRight">17dip</item>
+        <item name="android:layout_margin">0dp</item>
+    </style>
+    <style name="MyActionBar" parent="@style/Widget.AppCompat.Base.ActionBar">
         <item name="background">@drawable/bg_actionbar</item>
         <item name="backgroundStacked">@drawable/bg_actionbar</item>
         <item name="backgroundSplit">@drawable/bg_actionbar</item>
@@ -85,6 +91,9 @@
         <item name="android:padding">12dp</item>
         <item name="android:paddingTop">7dp</item>
         <item name="android:paddingBottom">7dp</item>
+    </style>
+    <style name="FrameLayoutBody.VPI">
+        <item name="android:padding">0dp</item>
     </style>
     <style name="TextViewAbout">
         <item name="android:layout_width">match_parent</item>
@@ -266,13 +275,20 @@
     </style>
     <style name="MainButtons.Main">
         <item name="android:width">150dp</item>
-        <item name="android:paddingTop">16dp</item>
-        <item name="android:paddingBottom">16dp</item>
+        <item name="android:paddingTop">15dp</item>
+        <item name="android:paddingBottom">15dp</item>
         <item name="android:layout_marginTop">6dp</item>
         <item name="android:layout_marginBottom">6dp</item>
     </style>
-    <style name="FragmentButtons" parent="MainButtons">
-
+   <style name="MainButtons.Sub" parent="MainButtons">
+       <item name="android:paddingTop">12dp</item>
+       <item name="android:paddingBottom">12dp</item>
+   </style>
+    <style name="FragmentButtons" parent="MainButtons.Sub">
+        <item name="android:paddingTop">14dp</item>
+        <item name="android:paddingBottom">14dp</item>
+        <item name="android:layout_marginTop">6dp</item>
+        <item name="android:layout_marginBottom">6dp</item>
     </style>
 
 
