--- a/geostats/src/main/res/drawable/bg_actionbar_tabview_pattern.xml
+++ b/geostats/src/main/res/drawable/bg_actionbar_tabview_pattern.xml
@@ -3,20 +3,20 @@
     <item
         android:state_pressed="true"
         android:state_focused="true"
-        android:drawable="@color/colorDarkGrey" />
+        android:drawable="@color/colorLogoBlue" />
     <item
         android:state_pressed="true"
         android:state_focused="false"
-        android:drawable="@color/colorDarkGrey" />
+        android:drawable="@color/colorLogoBlue" />
     <item
         android:state_pressed="true"
-        android:drawable="@color/colorDarkGrey" />
+        android:drawable="@color/colorLogoBlue" />
     <item
         android:state_focused="true"
-        android:drawable="@color/colorDarkGrey" />
+        android:drawable="@color/colorLogoBlue" />
     <item
         android:state_checked="true"
-        android:drawable="@color/colorDarkGrey" />
+        android:drawable="@color/colorLogoBlue" />
 
     <item android:drawable="@color/colorTransparent"/>
 
