--- a/geostats/src/main/res/layout-land/fragment_ocean.xml
+++ b/geostats/src/main/res/layout-land/fragment_ocean.xml
@@ -9,6 +9,10 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="12dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="12dp"
         android:layout_weight="@string/layoutWeightFragmentALand">
 
         <ImageView
@@ -23,6 +27,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:paddingTop="12dp"
         android:layout_weight="@string/layoutWeightFragmentBLand"
         android:orientation="vertical">
 
