--- a/geostats/src/main/res/values/styles.xml
+++ b/geostats/src/main/res/values/styles.xml
@@ -23,6 +23,7 @@
     <color name="colorDialogTitleText">@color/colorTdBg</color>
     <color name="colorF2F2F2">#f2f2f2</color>
     <color name="color8E8E8E">#8e8e8e</color>
+    <color name="colorLogoBlue">#6caadc</color>
 
     <style name="Main" parent="@style/Theme.AppCompat">
         <item name="android:background">@drawable/bg_body_pattern</item>
@@ -37,14 +38,44 @@
     <style name="Theme.PageIndicatorDefaults" parent="@style/Theme.AppCompat.Light">
         <item name="vpiIconPageIndicatorStyle">@style/Widget.IconPageIndicator</item>
         <item name="vpiTabPageIndicatorStyle">@style/MyTabPageIndicator</item>
+        <item name="android:actionBarTabStyle">@style/MyActionBarTabs</item>
+        <item name="android:actionBarTabBarStyle">@style/MyActionBarTabBar</item>
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
 
         <!-- Support library compatibility -->
         <item name="actionBarStyle">@style/MyActionBar</item>
-        <item name="actionBarTabBarStyle">@style/MyActionBarTabBarStyle</item>
-        <item name="actionBarTabStyle">@style/MyActionBarTabStyle</item>
+        <item name="actionBarTabStyle">@style/MyActionBarTabs</item>
+        <item name="actionBarTabBarStyle">@style/MyActionBarTabBar</item>
         <item name="actionBarTabTextStyle">@style/MyActionBarTabTextStyle</item>
-        <item name="actionBarItemBackground">@drawable/bg_actionbar_tabview_pattern</item>
         <item name="homeAsUpIndicator">@drawable/my_abc_ic_ab_back_holo_light</item>
+        <item name="actionBarItemBackground">@drawable/bg_actionbar_tabview_pattern</item>
+    </style>
+    <style name="MyActionBar" parent="@style/Widget.AppCompat.ActionBar">
+        <item name="background">@drawable/bg_actionbar_unselected</item>
+        <item name="titleTextStyle">@style/MyActionBarTitleText</item>
+    </style>
+    <style name="MyActionBarTitleText" parent="@style/TextAppearance.AppCompat.Widget.ActionMode.Title">
+        <item name="android:textColor">@color/colorDarkGrey</item>
+        <item name="android:shadowColor">@color/colorShadow</item>
+        <item name="android:shadowRadius">1</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">0</item>
+    </style>
+    <style name="MyActionBarTabBar" parent="@style/Widget.AppCompat.ActionBar.TabBar">
+        <item name="background">@drawable/bg_actionbar</item>
+        <item name="divider">@drawable/bg_actionbar_divider2</item>
+        <item name="dividerPadding">0dp</item>
+    </style>
+    <style name="MyActionBarTabs" parent="@style/Widget.AppCompat.ActionBar.TabView">
+        <item name="android:background">@drawable/bg_actionbar</item>
+        <item name="background">@drawable/bg_actionbar</item>
+    </style>
+    <style name="MyActionBarTabTextStyle" parent="Widget.AppCompat.Light.ActionBar.TabText">
+        <item name="android:textColor">@color/colorDarkGreyActionBar</item>
+        <item name="android:shadowColor">@color/colorShadow</item>
+        <item name="android:shadowRadius">1</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">0</item>
     </style>
     <style name="MyTabPageIndicator" parent="Widget.TabPageIndicator">
         <item name="android:background">@drawable/vptab</item>
@@ -53,35 +84,6 @@
         <item name="android:paddingRight">17dip</item>
         <item name="android:layout_margin">0dp</item>
     </style>
-    <style name="MyActionBar" parent="@style/Widget.AppCompat.Base.ActionBar">
-        <item name="background">@drawable/bg_actionbar</item>
-        <item name="backgroundStacked">@drawable/bg_actionbar</item>
-        <item name="backgroundSplit">@drawable/bg_actionbar</item>
-        <item name="titleTextStyle">@style/TitleTextStyle</item>
-    </style>
-    <style name="MyActionBarTabBarStyle" parent="@style/Widget.AppCompat.ActionBar.TabBar">
-        <item name="background">@drawable/bg_actionbar</item>
-        <item name="divider">@drawable/bg_actionbar_divider</item>
-        <item name="dividerPadding">0dp</item>
-    </style>
-    <style name="MyActionBarTabStyle" parent="@style/Widget.AppCompat.Light.ActionBar.TabView">
-
-    </style>
-    <style name="MyActionBarTabTextStyle" parent="@style/Widget.AppCompat.Light.ActionBar.TabText">
-        <item name="android:textColor">@color/colorDarkGreyActionBar</item>
-        <item name="android:shadowColor">@color/colorShadow</item>
-        <item name="android:shadowRadius">1</item>
-        <item name="android:shadowDx">1</item>
-        <item name="android:shadowDy">0</item>
-    </style>
-    <style name="TitleTextStyle" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:textColor">@color/colorDarkGreyActionBar</item>
-        <item name="android:shadowColor">@color/colorShadow</item>
-        <item name="android:shadowRadius">1</item>
-        <item name="android:shadowDx">1</item>
-        <item name="android:shadowDy">0</item>
-    </style>
-
     <style name="FrameLayoutBody">
         <item name="android:padding">12dp</item>
         <item name="android:background">@drawable/bg_content</item>
