--- a/geostats/src/main/res/values/styles.xml
+++ b/geostats/src/main/res/values/styles.xml
@@ -285,6 +285,7 @@
    <style name="MainButtons.Sub" parent="MainButtons">
        <item name="android:paddingTop">12dp</item>
        <item name="android:paddingBottom">12dp</item>
+       <item name="android:layout_marginRight">10dp</item>
    </style>
     <style name="FragmentButtons" parent="MainButtons.Sub">
         <item name="android:paddingTop">14dp</item>
