refractor branches -> topics, view -> show table, topic items like a list

--- a/geostats/src/main/res/layout-land/main.xml
+++ b/geostats/src/main/res/layout-land/main.xml
@@ -37,7 +37,7 @@
             android:layout_gravity="center"
             android:gravity="center">
             <Button
-                android:id="@+id/btBranches"
+                android:id="@+id/btTopics"
                 android:text="@string/Topics"
                 style="@style/MainButtons.Main"/>
             <Button
