--- a/geostats/src/main/res/layout-land/vp_europe_countries.xml
+++ b/geostats/src/main/res/layout-land/vp_europe_countries.xml
@@ -11,7 +11,7 @@
                 android:text="@string/LargestCountries"/>
             <Button
                 style="@style/TableTextView.GravityRight.Button"
-                android:text="@string/ViewTable"
+                android:text="@string/ShowTable"
                 android:id="@+id/btDialog"/>
 
 	    </TableRow>
@@ -21,7 +21,7 @@
                  android:text="@string/LargestEUCountries"/>
              <Button
                  style="@style/TableTextView.GravityRight.Button"
-                 android:text="@string/ViewTable"
+                 android:text="@string/ShowTable"
                  android:id="@+id/btDialog2" />
 	    </TableRow>
 	</TableLayout>
