--- a/geostats/src/main/res/layout-land/vp_samerica_mountains.xml
+++ b/geostats/src/main/res/layout-land/vp_samerica_mountains.xml
@@ -42,7 +42,7 @@
                 android:text="@string/HighestMountains"/>
             <Button
                 style="@style/TableTextView.GravityRight.Button"
-                android:text="@string/ViewTable"
+                android:text="@string/ShowTable"
                 android:id="@+id/btDialog1"/>
         </TableRow>
 
