--- a/geostats/src/main/res/layout/vp_africa_countries.xml
+++ b/geostats/src/main/res/layout/vp_africa_countries.xml
@@ -19,7 +19,7 @@
                 android:text="@string/LargestCountries"/>
             <Button
                 style="@style/TableTextView.GravityRight.Button"
-                android:text="@string/ViewTable"
+                android:text="@string/ShowTable"
                 android:id="@+id/btDialog"/>
 
         </TableRow>
