--- a/geostats/src/main/res/layout/vp_antarctica_mountains.xml
+++ b/geostats/src/main/res/layout/vp_antarctica_mountains.xml
@@ -47,7 +47,7 @@
                 android:text="@string/HighestMountains"/>
             <Button
                 style="@style/TableTextView.GravityRight.Button"
-                android:text="@string/ViewTable"
+                android:text="@string/ShowTable"
                 android:id="@+id/btDialog1"/>
         </TableRow>
 
