--- a/geostats/src/main/res/layout/vp_europe_cities.xml
+++ b/geostats/src/main/res/layout/vp_europe_cities.xml
@@ -11,7 +11,7 @@
                 android:text="@string/LargestCities"/>
             <Button
                 style="@style/TableTextView.GravityRight.Button"
-                android:text="@string/ViewTable"
+                android:text="@string/ShowTable"
                 android:id="@+id/btDialog5"/>
         </TableRow>
         <TableRow style="@style/TableRow">
@@ -20,7 +20,7 @@
                 android:text="@string/LargestUrbanAreas"/>
             <Button
                 style="@style/TableTextView.GravityRight.Button"
-                android:text="@string/ViewTable"
+                android:text="@string/ShowTable"
                 android:id="@+id/btDialog6"/>
         </TableRow>
         <TableRow style="@style/TableRow">
@@ -29,7 +29,7 @@
                 android:text="@string/Capitals"/>
             <Button
                 style="@style/TableTextView.GravityRight.Button"
-                android:text="@string/ViewTable"
+                android:text="@string/ShowTable"
                 android:id="@+id/btDialog9"/>
         </TableRow>
     </TableLayout>
