--- a/geostats/src/main/res/layout/vp_europe_countries.xml
+++ b/geostats/src/main/res/layout/vp_europe_countries.xml
@@ -20,7 +20,7 @@
                 android:text="@string/LargestCountries"/>
             <Button
                 style="@style/TableTextView.GravityRight.Button"
-                android:text="@string/ViewTable"
+                android:text="@string/ShowTable"
                 android:id="@+id/btDialog"/>
 
 	    </TableRow>
@@ -30,7 +30,7 @@
                  android:text="@string/LargestEUCountries"/>
              <Button
                  style="@style/TableTextView.GravityRight.Button"
-                 android:text="@string/ViewTable"
+                 android:text="@string/ShowTable"
                  android:id="@+id/btDialog2" />
 	    </TableRow>
 	</TableLayout>
