--- a/geostats/src/main/res/layout/vp_europe_population.xml
+++ b/geostats/src/main/res/layout/vp_europe_population.xml
@@ -36,7 +36,7 @@
                  android:text="@string/MostPopulatedCountries"/>
 		     <Button 
                   style="@style/TableTextView.GravityRight.Button"
-                  android:text="@string/ViewTable"
+                  android:text="@string/ShowTable"
                   android:id="@+id/btDialog3"/>
 		 </TableRow>
 		 <TableRow style="@style/TableRow">
@@ -45,7 +45,7 @@
                  android:text="@string/MostPopulatedEUCountries"/>
 		     <Button 
 		          style="@style/TableTextView.GravityRight.Button"
-                  android:text="@string/ViewTable"
+                  android:text="@string/ShowTable"
                   android:id="@+id/btDialog4"/>
 		 </TableRow>
 	</TableLayout>
