added map buttons for continents and oceans - without maps yet

--- a/geostats/src/main/res/layout/inc_fragment_buttons.xml
+++ b/geostats/src/main/res/layout/inc_fragment_buttons.xml
@@ -6,5 +6,6 @@
     <Button
         style="@style/MainButtons.Sub"
         android:text="@string/Maps"
+        android:layout_toRightOf="@+id/btDialog10"
         android:id="@+id/btDialog11"/>
 </merge>
