--- a/geostats/src/main/res/layout-land/dialog_atlantic_o_maps.xml
+++ b/geostats/src/main/res/layout-land/dialog_atlantic_o_maps.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/ScrollView.NoMargin">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/ScrollView.NoMargin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -31,4 +33,4 @@
             android:contentDescription="@string/AtlanticOcean"/>
 
     </RelativeLayout>
-</ScrollView>
+</RelativeLayout>
