--- a/geostats/src/main/res/layout-land/dialog_samerica_maps.xml
+++ b/geostats/src/main/res/layout-land/dialog_samerica_maps.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/ScrollView.NoMargin">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/ScrollView.NoMargin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -29,8 +31,7 @@
 
         <Button
             style="@style/FragmentButtons.SmallPadding"
-            android:layout_toRightOf="@+id/btMap1"
-            android:layout_below="@+id/imageNo"
+            android:layout_below="@+id/btMap1"
             android:text="@string/PoliticalMap"
             android:id="@+id/btMap2"/>
 
@@ -38,10 +39,13 @@
             android:layout_width="fill_parent"
             android:id="@+id/ivMap"
             android:layout_height="fill_parent"
-            android:layout_below="@+id/btMap1"
+            android:layout_toRightOf="@+id/btMap1"
+            android:layout_below="@+id/dTitle"
             android:src="@drawable/map"
             android:scaleType="matrix"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
             android:contentDescription="@string/SouthAmerica"/>
 
     </RelativeLayout>
-</ScrollView>
+</RelativeLayout>
