--- a/geostats/src/main/res/layout-land/dialog_southern_o_maps.xml
+++ b/geostats/src/main/res/layout-land/dialog_southern_o_maps.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/ScrollView.NoMargin">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/ScrollView.NoMargin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -8,7 +10,7 @@
 
         <TextView
             style="@style/DialogTitle"
-            android:text="@string/AtlanticOcean"
+            android:text="@string/SouthernOcean"
             android:id="@+id/dTitle"/>
 
         <TextView
@@ -28,7 +30,7 @@
             android:layout_below="@+id/imageNo"
             android:src="@drawable/map"
             android:scaleType="matrix"
-            android:contentDescription="@string/AtlanticOcean"/>
+            android:contentDescription="@string/SouthernOcean"/>
 
     </RelativeLayout>
-</ScrollView>
+</RelativeLayout>
