--- a/geostats/src/main/res/layout/dialog_southern_o_maps.xml
+++ b/geostats/src/main/res/layout/dialog_southern_o_maps.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/ScrollView">
+    style="@style/ScrollView.NoMargin">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -21,12 +21,13 @@
             style="@style/ButCloseDialog"
             android:id="@+id/btClose"/>
 
-        <com.geo.geostats.TouchImage
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:layout_width="fill_parent"
+            android:id="@+id/ivMap"
+            android:layout_height="fill_parent"
             android:layout_below="@+id/imageNo"
             android:src="@drawable/map"
-            android:scaleType="center"
+            android:scaleType="matrix"
             android:contentDescription="@string/SouthernOcean"/>
 
     </RelativeLayout>
