--- a/geostats/src/main/res/layout/dialog_arctic_o_maps.xml
+++ b/geostats/src/main/res/layout/dialog_arctic_o_maps.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/ScrollView.NoMargin">
 
     <RelativeLayout
@@ -22,13 +22,11 @@
             android:id="@+id/btClose"/>
 
         <ImageView
-            android:layout_width="fill_parent"
             android:id="@+id/ivMap"
-            android:layout_height="fill_parent"
+            style="@style/ImageViewMap"
             android:layout_below="@+id/imageNo"
-            android:src="@drawable/map"
-            android:scaleType="matrix"
+            android:src="@drawable/map_arctic_o"
             android:contentDescription="@string/ArcticOcean"/>
 
     </RelativeLayout>
-</ScrollView>
+</RelativeLayout>
