--- a/geostats/src/main/res/layout/dialog_namerica_maps.xml
+++ b/geostats/src/main/res/layout/dialog_namerica_maps.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/ScrollView.NoMargin">
 
     <RelativeLayout
@@ -21,6 +21,10 @@
             style="@style/ButCloseDialog"
             android:id="@+id/btClose"/>
 
+        <HorizontalScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"></HorizontalScrollView>
+
         <Button
             style="@style/FragmentButtons.SmallPadding"
             android:layout_below="@+id/imageNo"
@@ -31,17 +35,15 @@
             style="@style/FragmentButtons.SmallPadding"
             android:layout_toRightOf="@+id/btMap1"
             android:layout_below="@+id/imageNo"
-            android:text="@string/PoliticalMap"
+            android:text="@string/CentralAmPhysical"
             android:id="@+id/btMap2"/>
 
         <ImageView
-            android:layout_width="fill_parent"
             android:id="@+id/ivMap"
-            android:layout_height="fill_parent"
+            style="@style/ImageViewMap"
             android:layout_below="@+id/btMap1"
-            android:src="@drawable/map"
-            android:scaleType="matrix"
+            android:src="@drawable/map_namerica_physical"
             android:contentDescription="@string/NorthAmerica"/>
 
     </RelativeLayout>
-</ScrollView>
+</RelativeLayout>
