--- a/geostats/src/main/res/values/styles.xml
+++ b/geostats/src/main/res/values/styles.xml
@@ -237,6 +237,11 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/colorBBB</item>
     </style>
+    <style name="DialogChartNo.Inverse">
+        <item name="android:background">@color/colorTransparent</item>
+        <item name="android:textColor">@color/colorDarkGrey</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
     <style name="DialogTitle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -251,8 +256,18 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_alignParentTop">true</item>
         <item name="android:layout_alignParentRight">true</item>
-        <item name="android:layout_marginTop">6dp</item>
+        <item name="android:layout_marginTop">2dp</item>
+        <item name="android:layout_marginRight">2dp</item>
         <item name="android:background">@drawable/dialog_close</item>
+    </style>
+    <style name="ImageViewMap">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">fill_parent</item>
+        <item name="android:background">@color/colorFFF</item>
+        <item name="android:scaleType">matrix</item>
+    </style>
+    <style name="ImageViewMap.Land">
+        <item name="android:layout_marginTop">6dp</item>
     </style>
     <style name="ImageViewMapLand">
         <item name="android:layout_width">wrap_content</item>
