added maps for continents - 2. part

--- a/geostats/src/main/res/layout-land/dialog_antarctica_maps.xml
+++ b/geostats/src/main/res/layout-land/dialog_antarctica_maps.xml
@@ -13,39 +13,22 @@
             android:text="@string/Antarctica"
             android:id="@+id/dTitle"/>
 
-        <TextView
-            style="@style/DialogChartNo"
-            android:layout_below="@+id/dTitle"
-            android:id="@+id/imageNo"
-            android:text="@string/ImageNo"/>
-
         <Button
             style="@style/ButCloseDialog"
             android:id="@+id/btClose"/>
 
-        <Button
-            style="@style/FragmentButtons.SmallPadding"
-            android:layout_below="@+id/imageNo"
-            android:text="@string/PhysicalMap"
-            android:id="@+id/btMap1"/>
-
-        <Button
-            style="@style/FragmentButtons.SmallPadding"
-            android:layout_below="@+id/btMap1"
-            android:text="@string/PoliticalMap"
-            android:id="@+id/btMap2"/>
-
         <ImageView
-            android:layout_width="fill_parent"
             android:id="@+id/ivMap"
-            android:layout_height="fill_parent"
-            android:layout_toRightOf="@+id/btMap1"
+            style="@style/ImageViewMap.Land"
             android:layout_below="@+id/dTitle"
-            android:src="@drawable/map"
-            android:scaleType="matrix"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
+            android:src="@drawable/map_antarctica_political"
             android:contentDescription="@string/Antarctica"/>
+
+        <TextView
+            style="@style/DialogChartNo.Inverse"
+            android:layout_below="@+id/dTitle"
+            android:id="@+id/imageNo"
+            android:text="@string/ImageNo"/>
 
     </RelativeLayout>
 </RelativeLayout>
