--- a/geostats/src/main/res/layout-land/dialog_asia_maps.xml
+++ b/geostats/src/main/res/layout-land/dialog_asia_maps.xml
@@ -32,17 +32,15 @@
         <Button
             style="@style/FragmentButtons.SmallPadding"
             android:layout_below="@+id/btMap1"
-            android:text="@string/PoliticalMap"
+            android:text="@string/MiddleEast"
             android:id="@+id/btMap2"/>
 
         <ImageView
-            android:layout_width="fill_parent"
+            style="@style/ImageViewMap.Land"
             android:id="@+id/ivMap"
-            android:layout_height="fill_parent"
             android:layout_toRightOf="@+id/btMap1"
             android:layout_below="@+id/dTitle"
-            android:src="@drawable/map"
-            android:scaleType="matrix"
+            android:src="@drawable/map_asia_physical"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:contentDescription="@string/Asia"/>
