--- a/geostats/src/main/res/layout/dialog_oceania_maps.xml
+++ b/geostats/src/main/res/layout/dialog_oceania_maps.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/ScrollView.NoMargin">
 
     <RelativeLayout
@@ -21,27 +21,12 @@
             style="@style/ButCloseDialog"
             android:id="@+id/btClose"/>
 
-        <Button
-            style="@style/FragmentButtons.SmallPadding"
-            android:layout_below="@+id/imageNo"
-            android:text="@string/PhysicalMap"
-            android:id="@+id/btMap1"/>
-
-        <Button
-            style="@style/FragmentButtons.SmallPadding"
-            android:layout_toRightOf="@+id/btMap1"
-            android:layout_below="@+id/imageNo"
-            android:text="@string/PoliticalMap"
-            android:id="@+id/btMap2"/>
-
         <ImageView
-            android:layout_width="fill_parent"
             android:id="@+id/ivMap"
-            android:layout_height="fill_parent"
-            android:layout_below="@+id/btMap1"
-            android:src="@drawable/map"
-            android:scaleType="matrix"
+            style="@style/ImageViewMap"
+            android:layout_below="@+id/imageNo"
+            android:src="@drawable/map_oceania_physical"
             android:contentDescription="@string/Oceania"/>
 
     </RelativeLayout>
-</ScrollView>
+</RelativeLayout>
