thumbs image of continents and oceans for layout land

--- a/geostats/src/main/res/layout-land/fragment_continent.xml
+++ b/geostats/src/main/res/layout-land/fragment_continent.xml
@@ -16,9 +16,8 @@
         android:layout_weight="@string/layoutWeightFragmentALand">
 
         <ImageView
-            android:contentDescription="@string/Africa"
-            style="@style/ImageViewMapLand"
-            android:src="@drawable/map"/>
+            style="@style/ImageViewMapBasicLand"
+            android:id="@+id/ivMapBasic"/>
 
         <include layout="@layout/inc_fragment_buttons"/>
 
