--- a/geostats/src/main/res/values/styles.xml
+++ b/geostats/src/main/res/values/styles.xml
@@ -269,7 +269,7 @@
     <style name="ImageViewMap.Land">
         <item name="android:layout_marginTop">6dp</item>
     </style>
-    <style name="ImageViewMapLand">
+    <style name="ImageViewMapBasicLand">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:scaleType">centerCrop</item>
@@ -303,9 +303,10 @@
         <item name="android:layout_marginBottom">6dp</item>
     </style>
    <style name="MainButtons.Sub" parent="MainButtons">
-       <item name="android:paddingTop">12dp</item>
-       <item name="android:paddingBottom">12dp</item>
-       <item name="android:layout_marginRight">10dp</item>
+       <item name="android:paddingTop">8dp</item>
+       <item name="android:paddingBottom">8dp</item>
+       <item name="android:layout_marginTop">8dp</item>
+       <item name="android:layout_marginRight">8dp</item>
    </style>
     <style name="FragmentButtons" parent="MainButtons.Sub">
         <item name="android:paddingTop">14dp</item>
